--- a/CoffeeBreak.csproj
+++ b/CoffeeBreak.csproj
@@ -75,6 +75,12 @@
     <None Include="Lists\CoffeeTypes\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{1c0e458b-2d83-400c-be09-f534340c4ad9}</SharePointProjectItemId>
     </None>
+    <None Include="Lists\CoffeeType\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{da7977fe-45ce-4a57-a7c9-4616059f97a6}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\WithCoffein\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{c94a0a67-3300-428e-84fc-81572f0759a8}</SharePointProjectItemId>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -85,6 +91,8 @@
     <Content Include="Lists\CoffeeTypes\CoffeeTypesInstance\Elements.xml" />
     <Content Include="Lists\CoffeeTypes\Elements.xml" />
     <Content Include="Lists\CoffeeTypes\Schema.xml" />
+    <Content Include="Lists\CoffeeType\Elements.xml" />
+    <Content Include="Lists\WithCoffein\Elements.xml" />
     <Content Include="Pages\Elements.xml" />
     <Content Include="Pages\Default.aspx" />
     <None Include="Scripts\App.js.map" />
