Introduced own Query class

--- a/CoffeeBreak.csproj
+++ b/CoffeeBreak.csproj
@@ -214,6 +214,7 @@
     <TypeScriptCompile Include="src\controller\CreateDonationController.ts" />
     <TypeScriptCompile Include="src\controller\CreateTypeController.ts" />
     <TypeScriptCompile Include="src\controller\DashboardController.ts" />
+    <TypeScriptCompile Include="src\sp\Query.ts" />
     <TypeScriptCompile Include="src\views\CreateDonationView.ts" />
     <TypeScriptCompile Include="src\views\CreateTypeView.ts" />
     <TypeScriptCompile Include="src\sp\ExecutionContext.ts" />
