--- a/CoffeeBreak.csproj
+++ b/CoffeeBreak.csproj
@@ -69,6 +69,12 @@
     <TypeScriptSourceRoot />
   </PropertyGroup>
   <ItemGroup>
+    <Content Include="Lists\CoffeeTypeRelation\Elements.xml" />
+    <Content Include="Lists\DonationTypes\DonationTypesInstance\Elements.xml" />
+    <Content Include="Lists\DonationTypes\Elements.xml" />
+    <Content Include="Lists\DonationTypes\Schema.xml" />
+    <Content Include="Lists\DonationType\Elements.xml" />
+    <Content Include="Lists\Weight\Elements.xml" />
     <Content Include="views\createDonation.html" />
     <Content Include="views\dashboard.html" />
     <None Include="Content\App.scss" />
@@ -123,6 +129,9 @@
     <Content Include="Scripts\jquery-ui-1.12.0.js" />
     <Content Include="Scripts\jquery-ui-1.12.0.min.js" />
     <Content Include="views\createType.html" />
+    <None Include="Lists\CoffeeTypeRelation\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{0d4cf75c-35e7-4590-8b3e-cef5413bf450}</SharePointProjectItemId>
+    </None>
     <None Include="Lists\CoffeeTypes\CoffeeTypesInstance\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{05310c16-b7ae-4b5f-a11f-a4def41d54d6}</SharePointProjectItemId>
     </None>
@@ -131,6 +140,18 @@
     </None>
     <None Include="Lists\CoffeeType\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{c785893c-ebb4-4636-a1b5-7100be60c6fb}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\DonationTypes\DonationTypesInstance\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{06e45d59-3be2-4541-aeb1-64a9dc915152}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\DonationTypes\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{1c5d6d3c-e372-41c9-95ca-aac07535d308}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\DonationType\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{3c692666-b79f-4f0c-bf6e-c500f1943ee5}</SharePointProjectItemId>
+    </None>
+    <None Include="Lists\Weight\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{d044c377-be5f-453b-90ab-10ef9a479ada}</SharePointProjectItemId>
     </None>
     <None Include="Lists\WithCoffein\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{993ac06f-d8d1-4039-8ac1-a0e0fa2076d9}</SharePointProjectItemId>
